# rust-ecommerce-app

./: .env  Cargo.toml  diesel.toml
migrations/2025-01-16-183415_create_products/: down.sql  up.sql
migrations/2025-01-18-060813_create_users/: up.sql
src/: db.rs  main.rs  schema.rs
src/controllers/: auth.rs  dashboard.rs
src/models/: auth.rs  user.rs
src/routes/: auth.rs  web_routes.rs
templates/: login.html  register.html
templates/customer/dashboard/: index.html
templates/layouts/: customer.html
