[package]
name = "ecommerce_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
diesel = { version = "2.0", features = ["postgres", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tower-http = "0.6.1"
askama = "0.12"
axum-server = "0.7.1"
chrono = { version = "0.4", features = ["serde"] }

